--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Adaptereinstellungen für route-calculation",
-    "option1": "Option 1",
-    "option2": "Option 2"
+    "Adapter IP": "Adapter IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adapter zur Überprüfung des tatsächlichen Verkehrs auf der Straße basierend auf der HERE.com API v8-Version. ",
+    "Alarm Friday": "Alarm Freitag",
+    "Alarm Monday": "Alarm Montag",
+    "Alarm Saturday": "Alarm Samstag",
+    "Alarm Sunday": "Alarm Sonntag",
+    "Alarm Thursday": "Alarm Donnerstag",
+    "Alarm Tuesday": "Alarm Dienstag",
+    "Alarm Wednesday": "Alarm Mittwoch",
+    "Alarm enabled": "Alarm aktiviert",
+    "Alarmsettings for fridays": "Alarmeinstellungen für Freitag",
+    "Alarmsettings for mondays": "Alarmeinstellungen für Montag",
+    "Alarmsettings for saturdays": "Alarmeinstellungen für Samstage",
+    "Alarmsettings for sundays": "Alarmeinstellungen für Sonntage",
+    "Alarmsettings for thursdays": "Alarmeinstellungen für Donnerstag",
+    "Alarmsettings for tuesdays": "Alarmeinstellungen für Dienstage",
+    "Alarmsettings for wednesdays": "Alarmeinstellungen für Mittwoche",
+    "Alarmvolume (0-100)": "Alarmlautstärke (0-100)",
+    "Alexa-Device": "Alexa-Gerät",
+    "Arrivaltime (HH:MM)": "Ankunftszeit (HH:MM)",
+    "Destination": "Ziel",
+    "Disable announcements (only set 'triggered' State to true)": "Ankündigungen deaktivieren (nur den Status „ausgelöst“ auf „true“ setzen)",
+    "Distance": "Distanz",
+    "Distance from origin to destination": "Entfernung vom Ursprung zum Ziel",
+    "Duration with actual Traffic": "Dauer mit tatsächlichem Verkehr",
+    "Enable Alarm-Clock feature": "Aktivieren Sie die Weckerfunktion",
+    "HERE Api Key": "HERE API-Schlüssel",
+    "Informations about the route": "Informationen zur Route",
+    "Main settings": "Haupteinstellungen",
+    "Minutes between alarm and leaving the house": "Minuten zwischen Alarm und Verlassen des Hauses",
+    "Name": "Name",
+    "Normal duration without Traffic": "Normale Dauer ohne Verkehr",
+    "Origin": "Herkunft",
+    "Pollinginterval (in Minutes)": "Abfrageintervall (in Minuten)",
+    "Refresh": "Aktualisierung",
+    "Refresh this Route now": "Aktualisieren Sie diese Route jetzt",
+    "Routeinformation": "Routeninformationen",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Sprechen Sie die Saite, die 15 Sekunden nach Beginn des Tune-In-Spiels angesagt werden soll. ",
+    "Travel duration with actual traffic": "Reisedauer mit tatsächlichem Verkehr",
+    "True if alarm is triggered": "True, wenn ein Alarm ausgelöst wird",
+    "Tune-In StationID": "Tune-In StationID",
+    "Wakeup-Alarm": "Weckalarm",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Hier können Sie die Alarmfunktion aktivieren. ",
+    "add": "hinzufügen"
 }
