--- a/admin/i18n/en/translations.json
+++ b/admin/i18n/en/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Adapter settings for route-calculation",
-    "option1": "option1",
-    "option2": "option2"
+    "Adapter IP": "Adapter IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time",
+    "Alarm Friday": "Alarm Friday",
+    "Alarm Monday": "Alarm Monday",
+    "Alarm Saturday": "Alarm Saturday",
+    "Alarm Sunday": "Alarm Sunday",
+    "Alarm Thursday": "Alarm Thursday",
+    "Alarm Tuesday": "Alarm Tuesday",
+    "Alarm Wednesday": "Alarm Wednesday",
+    "Alarm enabled": "Alarm enabled",
+    "Alarmsettings for fridays": "Alarmsettings for fridays",
+    "Alarmsettings for mondays": "Alarmsettings for mondays",
+    "Alarmsettings for saturdays": "Alarmsettings for saturdays",
+    "Alarmsettings for sundays": "Alarmsettings for sundays",
+    "Alarmsettings for thursdays": "Alarmsettings for thursdays",
+    "Alarmsettings for tuesdays": "Alarmsettings for tuesdays",
+    "Alarmsettings for wednesdays": "Alarmsettings for wednesdays",
+    "Alarmvolume (0-100)": "Alarmvolume (0-100)",
+    "Alexa-Device": "Alexa-Device",
+    "Arrivaltime (HH:MM)": "Arrivaltime (HH:MM)",
+    "Destination": "Destination",
+    "Disable announcements (only set 'triggered' State to true)": "Disable announcements (only set 'triggered' State to true)",
+    "Distance": "Distance",
+    "Distance from origin to destination": "Distance from origin to destination",
+    "Duration with actual Traffic": "Duration with actual Traffic",
+    "Enable Alarm-Clock feature": "Enable Alarm-Clock feature",
+    "HERE Api Key": "HERE.com Api Key",
+    "Informations about the route": "Informations about the route",
+    "Main settings": "Main settings",
+    "Minutes between alarm and leaving the house": "Minutes between alarm and leaving the house",
+    "Name": "Name",
+    "Normal duration without Traffic": "Normal duration without Traffic",
+    "Origin": "Origin",
+    "Pollinginterval (in Minutes)": "Pollinginterval (in Minutes)",
+    "Refresh": "Refresh",
+    "Refresh this Route now": "Refresh this Route now",
+    "Routeinformation": "Routeinformation",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)",
+    "Travel duration with actual traffic": "Travel duration with actual traffic",
+    "True if alarm is triggered": "True if alarm is triggered",
+    "Tune-In StationID": "Tune-In StationID",
+    "Wakeup-Alarm": "Wakeup-Alarm",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)",
+    "add": "add"
 }
