--- a/admin/i18n/es/translations.json
+++ b/admin/i18n/es/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Ajustes del adaptador para route-calculation",
-    "option1": "Opción 1",
-    "option2": "opcion 2"
+    "Adapter IP": "Adaptador IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adaptador para verificar el tráfico real en la carretera basado en la versión v8 de la API de HERE.com. ",
+    "Alarm Friday": "Viernes de alarma",
+    "Alarm Monday": "Lunes de alarma",
+    "Alarm Saturday": "Sábado de alarma",
+    "Alarm Sunday": "Domingo de alarma",
+    "Alarm Thursday": "Jueves de alarma",
+    "Alarm Tuesday": "Martes de alarma",
+    "Alarm Wednesday": "Miércoles de alarma",
+    "Alarm enabled": "Alarma habilitada",
+    "Alarmsettings for fridays": "Configuraciones de alarma para los viernes",
+    "Alarmsettings for mondays": "Configuraciones de alarma para los lunes",
+    "Alarmsettings for saturdays": "Configuración de alarma para los sábados.",
+    "Alarmsettings for sundays": "Configuraciones de alarma para los domingos.",
+    "Alarmsettings for thursdays": "Configuración de alarma para los jueves.",
+    "Alarmsettings for tuesdays": "Configuración de alarma para los martes.",
+    "Alarmsettings for wednesdays": "Configuración de alarma para los miércoles.",
+    "Alarmvolume (0-100)": "Volumen de alarma (0-100)",
+    "Alexa-Device": "Dispositivo Alexa",
+    "Arrivaltime (HH:MM)": "Hora de llegada (HH:MM)",
+    "Destination": "Destino",
+    "Disable announcements (only set 'triggered' State to true)": "Deshabilitar anuncios (solo establezca el estado \"activado\" en verdadero)",
+    "Distance": "Distancia",
+    "Distance from origin to destination": "Distancia del origen al destino",
+    "Duration with actual Traffic": "Duración con tráfico real",
+    "Enable Alarm-Clock feature": "Habilitar la función de despertador",
+    "HERE Api Key": "HERE Clave API",
+    "Informations about the route": "Información sobre la ruta.",
+    "Main settings": "Ajustes principales",
+    "Minutes between alarm and leaving the house": "Minutos entre la alarma y la salida de casa",
+    "Name": "Nombre",
+    "Normal duration without Traffic": "Duración normal sin Tráfico",
+    "Origin": "Origen",
+    "Pollinginterval (in Minutes)": "Intervalo de sondeo (en minutos)",
+    "Refresh": "Actualizar",
+    "Refresh this Route now": "Actualizar esta ruta ahora",
+    "Routeinformation": "Información de ruta",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "La cadena de pronunciación se anunciará 15 segundos después de comenzar a reproducir Tune-In. ",
+    "Travel duration with actual traffic": "Duración del viaje con tráfico real",
+    "True if alarm is triggered": "Verdadero si se activa la alarma",
+    "Tune-In StationID": "ID de estación de sintonización",
+    "Wakeup-Alarm": "despertador-alarma",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Puede habilitar la función de alarma aquí. ",
+    "add": "agregar"
 }
