--- a/admin/i18n/fr/translations.json
+++ b/admin/i18n/fr/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Paramètres d'adaptateur pour route-calculation",
-    "option1": "Option 1",
-    "option2": "Option 2"
+    "Adapter IP": "Adaptateur IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adaptateur pour vérifier le trafic réel sur la route basé sur la version v8 de l'API HERE.com. ",
+    "Alarm Friday": "Alarme vendredi",
+    "Alarm Monday": "Alarme lundi",
+    "Alarm Saturday": "Alarme samedi",
+    "Alarm Sunday": "Dimanche d'alarme",
+    "Alarm Thursday": "Alarme jeudi",
+    "Alarm Tuesday": "Alarme mardi",
+    "Alarm Wednesday": "Alarme mercredi",
+    "Alarm enabled": "Alarme activée",
+    "Alarmsettings for fridays": "Paramètres d'alarme pour le vendredi",
+    "Alarmsettings for mondays": "Paramètres d'alarme pour le lundi",
+    "Alarmsettings for saturdays": "Paramètres d'alarme pour le samedi",
+    "Alarmsettings for sundays": "Paramètres d'alarme pour le dimanche",
+    "Alarmsettings for thursdays": "Paramètres d'alarme pour le jeudi",
+    "Alarmsettings for tuesdays": "Paramètres d'alarme pour le mardi",
+    "Alarmsettings for wednesdays": "Paramètres d'alarme pour le mercredi",
+    "Alarmvolume (0-100)": "Volume d'alarme (0-100)",
+    "Alexa-Device": "Appareil Alexa",
+    "Arrivaltime (HH:MM)": "Heure d'arrivée (HH:MM)",
+    "Destination": "Destination",
+    "Disable announcements (only set 'triggered' State to true)": "Désactiver les annonces (régler uniquement l'état « déclenché » sur vrai)",
+    "Distance": "Distance",
+    "Distance from origin to destination": "Distance de l'origine à la destination",
+    "Duration with actual Traffic": "Durée avec trafic réel",
+    "Enable Alarm-Clock feature": "Activer la fonction Réveil",
+    "HERE Api Key": "HERE Clé API",
+    "Informations about the route": "Informations sur l'itinéraire",
+    "Main settings": "Réglages principaux",
+    "Minutes between alarm and leaving the house": "Minutes entre l'alarme et le départ de la maison",
+    "Name": "Nom",
+    "Normal duration without Traffic": "Durée normale sans trafic",
+    "Origin": "Origine",
+    "Pollinginterval (in Minutes)": "Intervalle d'interrogation (en minutes)",
+    "Refresh": "Rafraîchir",
+    "Refresh this Route now": "Actualiser cet itinéraire maintenant",
+    "Routeinformation": "Informations sur l'itinéraire",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Prononcez la chaîne qui sera annoncée 15 secondes après le début de la lecture de Tune-In. ",
+    "Travel duration with actual traffic": "Durée du trajet avec trafic réel",
+    "True if alarm is triggered": "Vrai si l'alarme est déclenchée",
+    "Tune-In StationID": "ID de la station de syntonisation",
+    "Wakeup-Alarm": "Réveil-Alarme",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Vous pouvez activer la fonction Alarme ici. ",
+    "add": "ajouter"
 }
