--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Impostazioni dell'adattatore per route-calculation",
-    "option1": "opzione 1",
-    "option2": "opzione 2"
+    "Adapter IP": "Adattatore IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adattatore per verificare il traffico effettivo sulla strada basato sulla versione HERE.com API v8. ",
+    "Alarm Friday": "Venerdì allarme",
+    "Alarm Monday": "Lunedì allarme",
+    "Alarm Saturday": "Sabato allarme",
+    "Alarm Sunday": "Domenica d'allarme",
+    "Alarm Thursday": "Giovedì allarme",
+    "Alarm Tuesday": "Martedì allarme",
+    "Alarm Wednesday": "Mercoledì allarme",
+    "Alarm enabled": "Allarme abilitato",
+    "Alarmsettings for fridays": "Impostazioni di allarme per venerdì",
+    "Alarmsettings for mondays": "Impostazioni di allarme per il lunedì",
+    "Alarmsettings for saturdays": "Impostazioni della sveglia per il sabato",
+    "Alarmsettings for sundays": "Impostazioni di allarme per la domenica",
+    "Alarmsettings for thursdays": "Impostazioni della sveglia per il giovedì",
+    "Alarmsettings for tuesdays": "Impostazioni della sveglia per il martedì",
+    "Alarmsettings for wednesdays": "Impostazioni di allarme per il mercoledì",
+    "Alarmvolume (0-100)": "Volume allarme (0-100)",
+    "Alexa-Device": "Dispositivo Alexa",
+    "Arrivaltime (HH:MM)": "Orario di arrivo (OO:MM)",
+    "Destination": "Destinazione",
+    "Disable announcements (only set 'triggered' State to true)": "Disabilita gli annunci (imposta solo lo stato \"attivato\" su vero)",
+    "Distance": "Distanza",
+    "Distance from origin to destination": "Distanza dall'origine alla destinazione",
+    "Duration with actual Traffic": "Durata con traffico effettivo",
+    "Enable Alarm-Clock feature": "Abilita la funzione sveglia",
+    "HERE Api Key": "HERE Chiave Api",
+    "Informations about the route": "Informazioni sul percorso",
+    "Main settings": "Impostazioni principali",
+    "Minutes between alarm and leaving the house": "Minuti tra l'allarme e l'uscita di casa",
+    "Name": "Nome",
+    "Normal duration without Traffic": "Durata normale senza traffico",
+    "Origin": "Origine",
+    "Pollinginterval (in Minutes)": "Intervallo di polling (in minuti)",
+    "Refresh": "ricaricare",
+    "Refresh this Route now": "Aggiorna questo percorso adesso",
+    "Routeinformation": "Informazioni sul percorso",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Pronuncia la stringa da annunciare 15 secondi dopo l'inizio della riproduzione di Tune-In. ",
+    "Travel duration with actual traffic": "Durata del viaggio con traffico effettivo",
+    "True if alarm is triggered": "Vero se viene attivato l'allarme",
+    "Tune-In StationID": "StationID sintonizzazione",
+    "Wakeup-Alarm": "Sveglia-allarme",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "È possibile abilitare la funzione Allarme qui. ",
+    "add": "aggiungere"
 }
