--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Adapterinstellingen voor route-calculation",
-    "option1": "Optie 1",
-    "option2": "Optie 2"
+    "Adapter IP": "Adapter IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adapter om het daadwerkelijke verkeer op de weg te controleren op basis van de HERE.com API v8-versie. ",
+    "Alarm Friday": "Wekker vrijdag",
+    "Alarm Monday": "Alarmmaandag",
+    "Alarm Saturday": "Wekker zaterdag",
+    "Alarm Sunday": "Alarmzondag",
+    "Alarm Thursday": "Wekker donderdag",
+    "Alarm Tuesday": "Wekker dinsdag",
+    "Alarm Wednesday": "Wekker woensdag",
+    "Alarm enabled": "Alarm ingeschakeld",
+    "Alarmsettings for fridays": "Alarminstellingen voor vrijdag",
+    "Alarmsettings for mondays": "Alarminstellingen voor maandag",
+    "Alarmsettings for saturdays": "Alarminstellingen voor zaterdag",
+    "Alarmsettings for sundays": "Alarminstellingen voor zondag",
+    "Alarmsettings for thursdays": "Alarminstellingen voor donderdag",
+    "Alarmsettings for tuesdays": "Alarminstellingen voor dinsdag",
+    "Alarmsettings for wednesdays": "Alarminstellingen voor woensdag",
+    "Alarmvolume (0-100)": "Alarmvolume (0-100)",
+    "Alexa-Device": "Alexa-apparaat",
+    "Arrivaltime (HH:MM)": "Aankomsttijd (UU:MM)",
+    "Destination": "Bestemming",
+    "Disable announcements (only set 'triggered' State to true)": "Meldingen uitschakelen (stel alleen 'getriggerde' status in op waar)",
+    "Distance": "Afstand",
+    "Distance from origin to destination": "Afstand van herkomst tot bestemming",
+    "Duration with actual Traffic": "Duur met feitelijk verkeer",
+    "Enable Alarm-Clock feature": "Schakel de wekkerfunctie in",
+    "HERE Api Key": "HERE API-sleutel",
+    "Informations about the route": "Informatie over de route",
+    "Main settings": "Belangrijkste instellingen",
+    "Minutes between alarm and leaving the house": "Minuten tussen het alarm en het verlaten van het huis",
+    "Name": "Naam",
+    "Normal duration without Traffic": "Normale duur zonder verkeer",
+    "Origin": "Oorsprong",
+    "Pollinginterval (in Minutes)": "Pollinginterval (in minuten)",
+    "Refresh": "Vernieuwen",
+    "Refresh this Route now": "Vernieuw deze route nu",
+    "Routeinformation": "Routeinformatie",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Spreek de tekenreeks uit die 15 seconden na het begin van het afspelen van Tune-In wordt aangekondigd. ",
+    "Travel duration with actual traffic": "Reisduur met daadwerkelijk verkeer",
+    "True if alarm is triggered": "Waar als er een alarm wordt geactiveerd",
+    "Tune-In StationID": "Afstemmen op station-ID",
+    "Wakeup-Alarm": "Wake-up-alarm",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Hier kunt u de Alarmfunctie inschakelen. ",
+    "add": "toevoegen"
 }
