--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Ustawienia adaptera dla route-calculation",
-    "option1": "opcja 1",
-    "option2": "Opcja 2"
+    "Adapter IP": "Adres IP adaptera",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adapter do sprawdzania rzeczywistego ruchu na drodze w oparciu o wersję API Here.com v8. ",
+    "Alarm Friday": "Alarmowy piątek",
+    "Alarm Monday": "Alarmowy poniedziałek",
+    "Alarm Saturday": "Alarmowa sobota",
+    "Alarm Sunday": "Niedziela alarmowa",
+    "Alarm Thursday": "Alarmowy czwartek",
+    "Alarm Tuesday": "Alarmowy wtorek",
+    "Alarm Wednesday": "Alarmowa środa",
+    "Alarm enabled": "Alarm włączony",
+    "Alarmsettings for fridays": "Ustawienia alarmów na piątki",
+    "Alarmsettings for mondays": "Ustawienia alarmów na poniedziałki",
+    "Alarmsettings for saturdays": "Ustawienia alarmów na soboty",
+    "Alarmsettings for sundays": "Ustawienia alarmów na niedzielę",
+    "Alarmsettings for thursdays": "Ustawienia alarmów na czwartki",
+    "Alarmsettings for tuesdays": "Ustawienia alarmów na wtorki",
+    "Alarmsettings for wednesdays": "Ustawienia alarmów na środy",
+    "Alarmvolume (0-100)": "Głośność alarmu (0-100)",
+    "Alexa-Device": "Urządzenie Alexa",
+    "Arrivaltime (HH:MM)": "Godzina przybycia (GG:MM)",
+    "Destination": "Miejsce docelowe",
+    "Disable announcements (only set 'triggered' State to true)": "Wyłącz ogłoszenia (ustaw tylko stan „wyzwalany” na wartość true)",
+    "Distance": "Dystans",
+    "Distance from origin to destination": "Odległość od punktu początkowego do docelowego",
+    "Duration with actual Traffic": "Czas trwania rzeczywistego ruchu",
+    "Enable Alarm-Clock feature": "Włącz funkcję budzika",
+    "HERE Api Key": "TUTAJ Klucz API",
+    "Informations about the route": "Informacje o trasie",
+    "Main settings": "Ustawienia główne",
+    "Minutes between alarm and leaving the house": "Minuty między alarmem a wyjściem z domu",
+    "Name": "Nazwa",
+    "Normal duration without Traffic": "Normalny czas trwania bez ruchu",
+    "Origin": "Pochodzenie",
+    "Pollinginterval (in Minutes)": "Interwał odpytywania (w minutach)",
+    "Refresh": "Odświeżać",
+    "Refresh this Route now": "Odśwież teraz tę trasę",
+    "Routeinformation": "Informacje o trasie",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Wypowiedz ciąg znaków, który zostanie ogłoszony 15 sekund po rozpoczęciu odtwarzania Tune-In. ",
+    "Travel duration with actual traffic": "Czas podróży przy rzeczywistym ruchu",
+    "True if alarm is triggered": "Prawda, jeśli zostanie uruchomiony alarm",
+    "Tune-In StationID": "Dostrój ID stacji",
+    "Wakeup-Alarm": "Budzik-Alarm",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Tutaj możesz włączyć funkcję alarmu. ",
+    "add": "dodać"
 }
