--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Configurações do adaptador para route-calculation",
-    "option1": "Opção 1",
-    "option2": "opção 2"
+    "Adapter IP": "IP do adaptador",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Adaptador para verificar o tráfego real na estrada com base na versão v8 da API HERE.com. ",
+    "Alarm Friday": "Alarme sexta-feira",
+    "Alarm Monday": "Alarme segunda-feira",
+    "Alarm Saturday": "Alarme sábado",
+    "Alarm Sunday": "Domingo de alarme",
+    "Alarm Thursday": "Alarme quinta-feira",
+    "Alarm Tuesday": "Alarme terça-feira",
+    "Alarm Wednesday": "Quarta-feira de alarme",
+    "Alarm enabled": "Alarme ativado",
+    "Alarmsettings for fridays": "Configurações de alarme para sextas-feiras",
+    "Alarmsettings for mondays": "Configurações de alarme para segundas-feiras",
+    "Alarmsettings for saturdays": "Configurações de alarme para sábados",
+    "Alarmsettings for sundays": "Configurações de alarme para domingos",
+    "Alarmsettings for thursdays": "Configurações de alarme para quintas-feiras",
+    "Alarmsettings for tuesdays": "Configurações de alarme para terças-feiras",
+    "Alarmsettings for wednesdays": "Configurações de alarme para quartas-feiras",
+    "Alarmvolume (0-100)": "Volume do alarme (0-100)",
+    "Alexa-Device": "Dispositivo Alexa",
+    "Arrivaltime (HH:MM)": "Hora de chegada (HH:MM)",
+    "Destination": "Destino",
+    "Disable announcements (only set 'triggered' State to true)": "Desativar anúncios (defina apenas o estado 'triggered' como verdadeiro)",
+    "Distance": "Distância",
+    "Distance from origin to destination": "Distância da origem ao destino",
+    "Duration with actual Traffic": "Duração com tráfego real",
+    "Enable Alarm-Clock feature": "Habilitar recurso Despertador",
+    "HERE Api Key": "AQUI Chave API",
+    "Informations about the route": "Informações sobre o percurso",
+    "Main settings": "Configurações principais",
+    "Minutes between alarm and leaving the house": "Minutos entre o alarme e a saída de casa",
+    "Name": "Nome",
+    "Normal duration without Traffic": "Duração normal sem tráfego",
+    "Origin": "Origem",
+    "Pollinginterval (in Minutes)": "Intervalo de pesquisa (em minutos)",
+    "Refresh": "Atualizar",
+    "Refresh this Route now": "Atualize esta rota agora",
+    "Routeinformation": "Informações de rota",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Fale a sequência a ser anunciada 15 segundos após o início da reprodução do Tune-In. ",
+    "Travel duration with actual traffic": "Duração da viagem com tráfego real",
+    "True if alarm is triggered": "Verdadeiro se o alarme for acionado",
+    "Tune-In StationID": "Estação de sintonia ID",
+    "Wakeup-Alarm": "Alarme de despertar",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Você pode ativar a função de alarme aqui. ",
+    "add": "adicionar"
 }
