--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "Настройки адаптера для route-calculation",
-    "option1": "Опция 1",
-    "option2": "вариант 2"
+    "Adapter IP": "IP-адрес адаптера",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "Адаптер для проверки фактического трафика на дороге на основе версии HERE.com API v8. ",
+    "Alarm Friday": "Будильник пятница",
+    "Alarm Monday": "Будильник понедельник",
+    "Alarm Saturday": "Будильник в субботу",
+    "Alarm Sunday": "Будильник в воскресенье",
+    "Alarm Thursday": "Будильник в четверг",
+    "Alarm Tuesday": "Будильник вторник",
+    "Alarm Wednesday": "Тревога в среду",
+    "Alarm enabled": "Будильник включен",
+    "Alarmsettings for fridays": "Настройки будильника на пятницу",
+    "Alarmsettings for mondays": "Настройки будильника на понедельник",
+    "Alarmsettings for saturdays": "Настройки будильника на субботу",
+    "Alarmsettings for sundays": "Настройки будильника на воскресенье",
+    "Alarmsettings for thursdays": "Настройки будильника на четверг",
+    "Alarmsettings for tuesdays": "Настройки будильника на вторник",
+    "Alarmsettings for wednesdays": "Настройки будильника на среду",
+    "Alarmvolume (0-100)": "Громкость сигнала тревоги (0-100)",
+    "Alexa-Device": "Alexa-устройство",
+    "Arrivaltime (HH:MM)": "Время прибытия (ЧЧ:ММ)",
+    "Destination": "Место назначения",
+    "Disable announcements (only set 'triggered' State to true)": "Отключить объявления (только установить для состояния «триггер» значение true)",
+    "Distance": "Расстояние",
+    "Distance from origin to destination": "Расстояние от пункта отправления до пункта назначения",
+    "Duration with actual Traffic": "Продолжительность с фактическим трафиком",
+    "Enable Alarm-Clock feature": "Включить функцию будильника",
+    "HERE Api Key": "ЗДЕСЬ API-ключ",
+    "Informations about the route": "Информация о маршруте",
+    "Main settings": "Основные настройки",
+    "Minutes between alarm and leaving the house": "Минуты между сигналом тревоги и выходом из дома",
+    "Name": "Имя",
+    "Normal duration without Traffic": "Нормальная продолжительность без пробок",
+    "Origin": "Источник",
+    "Pollinginterval (in Minutes)": "Интервал опроса (в минутах)",
+    "Refresh": "Обновить",
+    "Refresh this Route now": "Обновить этот маршрут сейчас",
+    "Routeinformation": "Информация о маршруте",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "Произнесите строку, которая будет объявлена ​​через 15 секунд после начала воспроизведения Tune-In. ",
+    "Travel duration with actual traffic": "Продолжительность поездки с учетом фактического трафика",
+    "True if alarm is triggered": "Истинно, если сработала тревога",
+    "Tune-In StationID": "Идентификатор станции настройки",
+    "Wakeup-Alarm": "Будильник-будильник",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "Здесь вы можете включить функцию сигнализации. ",
+    "add": "добавлять"
 }
