--- a/admin/i18n/zh-cn/translations.json
+++ b/admin/i18n/zh-cn/translations.json
@@ -1,5 +1,46 @@
 {
-    "route-calculation adapter settings": "route-calculation的适配器设置",
-    "option1": "选项1",
-    "option2": "选项2"
+    "Adapter IP": "适配器IP",
+    "Adapter to check actual traffic on the road based on the HERE.com API v8 version. Can wake someone up in time to arrive at destination in time": "基于 HERE.com API v8 版本检查道路实际交通情况的适配器。",
+    "Alarm Friday": "周五闹钟",
+    "Alarm Monday": "周一闹钟",
+    "Alarm Saturday": "周六闹钟",
+    "Alarm Sunday": "周日闹钟",
+    "Alarm Thursday": "周四闹钟",
+    "Alarm Tuesday": "周二闹钟",
+    "Alarm Wednesday": "周三闹钟",
+    "Alarm enabled": "报警已启用",
+    "Alarmsettings for fridays": "周五闹钟设置",
+    "Alarmsettings for mondays": "周一闹钟设置",
+    "Alarmsettings for saturdays": "周六闹钟设置",
+    "Alarmsettings for sundays": "周日闹钟设置",
+    "Alarmsettings for thursdays": "周四的闹钟设置",
+    "Alarmsettings for tuesdays": "周二的闹钟设置",
+    "Alarmsettings for wednesdays": "星期三的闹钟设置",
+    "Alarmvolume (0-100)": "报警音量（0-100）",
+    "Alexa-Device": "Alexa 设备",
+    "Arrivaltime (HH:MM)": "到达时间 (HH:MM)",
+    "Destination": "目的地",
+    "Disable announcements (only set 'triggered' State to true)": "禁用公告（仅将“已触发”状态设置为 true）",
+    "Distance": "距离",
+    "Distance from origin to destination": "出发地到目的地的距离",
+    "Duration with actual Traffic": "实际流量持续时间",
+    "Enable Alarm-Clock feature": "启用闹钟功能",
+    "HERE Api Key": "这里 API 密钥",
+    "Informations about the route": "有关路线的信息",
+    "Main settings": "主要设置",
+    "Minutes between alarm and leaving the house": "报警和离开家之间的分钟数",
+    "Name": "姓名",
+    "Normal duration without Traffic": "正常持续时间（无流量）",
+    "Origin": "起源",
+    "Pollinginterval (in Minutes)": "轮询间隔（以分钟为单位）",
+    "Refresh": "刷新",
+    "Refresh this Route now": "立即刷新此路线",
+    "Routeinformation": "路线信息",
+    "Speak string to be announced 15 Seconds after start playing Tune-In. (%dur = Travelduration, %name = Routename)": "开始播放 Tune-In 后 15 秒说出要宣布的字符串。 ",
+    "Travel duration with actual traffic": "行程时长与实际路况",
+    "True if alarm is triggered": "如果触发警报则为 True",
+    "Tune-In StationID": "调台 ID",
+    "Wakeup-Alarm": "唤醒闹钟",
+    "You can enable the Alarmfunction here. The Adapter will trigger the Alarm if it is time to get up. (Configure the Alarm in the States of the Routes.)": "您可以在此处启用警报功能。",
+    "add": "添加"
 }
